# buyer-intent-scraper

./: .gitignore  README.md  config.example.yaml  pyproject.toml
docs/: github-actions-ci.yml
scripts/: run_scheduled.py
src/buyer_intent_scraper/: __init__.py  __main__.py  cli.py  config.py  emailer.py  extract.py  models.py  output.py  pipeline.py  query.py  search.py
src/buyer_intent_scraper/sources/: __init__.py  agent.py  base.py  directories.py  google_dork.py  kenya_ppip.py  tender_portals.py  world_bank.py
tests/: test_extract.py  test_output.py  test_pipeline.py  test_query.py
