[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buyer-intent-scraper"
version = "0.1.0"
description = "Find public companies/individuals/organizations requesting a service in a location, with contact details, exported to CSV."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "manduzu" }]
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "PyYAML>=6.0",
    "ddgs>=6.0",
    "phonenumbers>=8.13",
    "tldextract>=5.1",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-requests>=2.31",
    "types-PyYAML>=6.0",
]
# Engine 3: the Gemini-powered browser_use agent (heavy; optional).
agent = [
    "browser-use>=0.12",
]

[project.scripts]
buyer-intent-scraper = "buyer_intent_scraper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
no_implicit_optional = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
